--- a/book/index.html
+++ b/book/index.html
@@ -102,17 +102,19 @@
       <h1 class="title"><span class="big">System Change</span><br>Actionable Policies to Handle Climate Emergency</h1>
 
       <p>
-        <a class="thelink" href="https://archive.org/download/system-change-actionable-policies-to-handle-climate-emergency/System%20Change%20-%20Actionable%20Policies%20to%20Handle%20Climate%20Emergency.pdf">PDF on archive.org</a>
+        <a class="thelink" href="https://archive.org/download/system-change-actionable-policies-to-handle-climate-emergency/System%20Change%20-%20Actionable%20Policies%20to%20Handle%20Climate%20Emergency.pdf">PDF on archive.org</a><br><br>
 
 
-        <a class="thelink" href="https://gateway.ipfs.io/ipfs/QmS5iAtutKUj5nrvXU2LjeDjQ3tCtGxSxzoYGnJAJAq6S3">PDF on IPFS</a>
+        <a class="thelink" href="https://gateway.ipfs.io/ipfs/QmS5iAtutKUj5nrvXU2LjeDjQ3tCtGxSxzoYGnJAJAq6S3">PDF on IPFS</a><br><br>
 
-        <a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google&nbsp;Doc</a>
+        <a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google&nbsp;Doc</a><br><br>
 
-        <a class="thelink" href="https://amzn.to/2mI3iNJ">Amazon Kindle</a>
+        <a class="thelink" href="https://amzn.to/2mI3iNJ">Amazon Kindle</a><br><br>
+
+        <a class="thelink" href="https://play.google.com/books/reader?id=-XjADwAAQBAJ">Google Books</a><br><br>
       </p>
 
-      <div class="title">Information always wants to be free. Please share it widely</div>
+      <div class="title">Information always wants to be free.<br><br>Please share it widely</div>
 
       <br>
 
@@ -124,16 +126,16 @@
   li { margin-bottom: 10px }
 </style>
 
-<p>
-  <div class="title">Architecting Earth 2.0</div>
-  Many things will have to change, these are the most impactful and critical points, attainable right now:
-  <ol>
-    <li>Land use. Food system. Less crops to feed livestock. Rebuilding soil and natural ecosystems.</li>
-    <li>Emissions Trading System. No more free allowances. Unified global standard supported by enforceable sanctions.</li>
-    <li>Energy storage and transmission. You can install solar panels but it will not reduce the dependency on fossil fuels - we are using peaker plants to supply electricity during peak demand.</li>
-  </ol>
-  The book covers many other things and many interdependencies in more detail.
-</p>
+  <br>
+
+
+    <p><strong style="font-size:1.2em;">1️⃣ Land Use.</strong><br>Food system. Less crops to feed livestock. Rebuilding soil and natural ecosystems.</p>
+    <p><strong style="font-size:1.2em;">2️⃣ Emissions Trading System.</strong><br>No more free allowances. Unified global standard supported by enforceable sanctions.</p>
+    <p><strong style="font-size:1.2em;">3️⃣ Energy Storage.</strong><br>You can install solar panels but it will not reduce the dependency on fossil fuels - we are using peaker plants to supply electricity during peak demand.</p>
+
+    <div class="title">POST-COVID</div>
+  <p>Everything remains valid.<br>The only difference - humanity is ready to make the shift!</p>
+  <!-- <p>The book covers many other things and many interdependencies in more detail.</p> -->
 
 
     
