--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 
 
       <h3>architecting the new world</h3>
-      <h3>operating system for the planet(s)</h3>
+      <h3 style="margin-bottom: 10px">operating system for the planet(s)</h3>
 
       <!-- <h3><a href="book">The book is ready!</a></h3> -->
 
-      <h3 style="margin-bottom: 10px">current projects</h3>
+      <!-- <h3 style="margin-bottom: 10px">current projects</h3> -->
 
       <style> .emoji {
         margin-top: 20px;
@@ -144,8 +144,8 @@
 <span class="emoji">🏝</span> <a href="https://IslandDAO.org">IslandDAO.org</a><br><br>
 <span class="emoji">💌</span> <a href="https://mailhustle.com">mailhustle.com</a><br><br>
 <span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br>
+<span class="emoji">🔮</span> <a href="https://www.abundance.community/members/3362617">Abundance Digital with Peter Diamandis</a><br><br>
 
-<p>Hacker mindset can go a long way. Amazon Kindle does not allow FREE, need charge $0.99? Can sell on Google for FREE, then do price match.</p>
 
       <br>
 
