--- a/citizenscience/index.html
+++ b/citizenscience/index.html
@@ -99,8 +99,9 @@ a {
 
 <div class="content">
   <h1>London Real Citizen Science</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vkCOZiqOhBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>Share this page: <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a></p>
-  <p>Ethereum address: <code>0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9</code></p>
+  <p>Ethereum address: <strong><code>0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9</code></strong></p>
   <p>Experiment design: <a href="https://londonreal.github.io/citizen-science/">londonreal.github.io/citizen-science/</a></p>
   <!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
 </div>
