--- a/citizenscience/index.html
+++ b/citizenscience/index.html
@@ -5,6 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
+    html {
+      box-sizing: border-box;
+    }
+    *, *:before, *:after {
+      box-sizing: inherit;
+    }
+
     body, html {
       padding: 0;
       margin: 0;
@@ -27,27 +34,10 @@
     }
 
     .wrapper video {
-      /*object-fit: contain;*/
-/*       object-fit: fill; */
       object-fit: cover;
       width:100%;
       height:100%;
     }
-
-/*    h1 {
-      font-family: sans-serif;
-      color:white;
-      margin: 0;
-      position: absolute;
-      z-index: 2;
-      font-size: 15vmin;
-      top:50%;
-      transform:translateY(-50%);
-      width: 100%;
-      text-align: center;
-      text-transform: uppercase;
-      text-shadow:4px 4px 0 rgba(0,0,0,0.4);
-    }*/
 
     p {
       font-family: sans-serif;
@@ -87,19 +77,56 @@ a {
   color: white;
 }
 
+.videoWrapper {
+		position:relative;
+		padding-bottom:56.25%;
+		padding-top:30px;
+		height:0;
+		overflow:hidden;
+	}
+
+	.videoWrapper iframe, .videoWrapper object, .videoWrapper embed {
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+	}
+
 </style>
+
+<meta property="og:title" content="London Real Citizen Science"/>
+<meta property="og:image" content="https://genesis.re/citizenscience/london-real-david-icke.jpg""/>
+<meta property="og:site_name" content="genesis.re"/>
+<meta property="og:description" content="Not into conspiracy theories, let's see what science says?"/>
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@genesisdotre">
+<meta name="twitter:creator" content="@marsXrobertson">
+<meta name="twitter:title" content="London Real Citizen Science">
+<meta name="twitter:description" content="Not into conspiracy theories, let's see what science says?">
+<meta name="twitter:image" content="https://genesis.re/citizenscience/london-real-david-icke.jpg">
+
 </head>
 <body>
 
 
 
   <div class="wrapper">
-    <video src="icke.mp4" preload="auto" autoplay="true" loop="loop" muted="" volume="0"></video>
+    <!-- <video src="icke.mp4" preload="auto" autoplay="true" loop="loop" muted="" volume="0"></video> -->
   </div>
 
 <div class="content">
   <h1>London Real Citizen Science</h1>
+  <p>Not into conspiracy theories, let's see what science says?</p>
+
+  <div style="max-width: 560px">
+    <div class="videoWrapper">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/vkCOZiqOhBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 
+ </div>
+ </div>
+ 
   <p>Share this page: <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a></p>
   <p>Ethereum address: <strong><code><a href="ethereum:0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9">0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9</a></code></strong></p>
   <p>Experiment design: <a href="https://londonreal.github.io/citizen-science/">londonreal.github.io/citizen-science/</a></p>
