Video on. Etherscan on.

--- a/citizenscience/index.html
+++ b/citizenscience/index.html
@@ -104,7 +104,7 @@ a {
 
 
   <div class="wrapper">
-    <!-- <video src="icke.mp4" preload="auto" autoplay="true" loop="loop" muted="" volume="0"></video> -->
+    <video src="icke.mp4" preload="auto" autoplay="true" loop="loop" muted="" volume="0"></video>
   </div>
 
 <div class="content">
@@ -116,8 +116,8 @@ a {
     <div class='embed-container'><iframe src='https://www.youtube.com/embed/vkCOZiqOhBM' frameborder='0' allowfullscreen></iframe></div>
   </div>
 
-  <p>Share this page: <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a></p>
-  <p>Ethereum address: <strong><code><a href="ethereum:0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9">0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9</a></code></strong></p>
+  <p>Link to this page: <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a></p>
+  <p>Ethereum address: <strong><code><a href="https://etherscan.io/address/0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9">0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9</a></code></strong></p>
   <p>Experiment design: <a href="https://londonreal.github.io/citizen-science/">londonreal.github.io/citizen-science/</a></p>
   <!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
 </div>
