--- a/citizenscience/index.html
+++ b/citizenscience/index.html
@@ -109,16 +109,15 @@ a {
 
 <div class="content">
   <h1>London Real Citizen Science</h1>
-  <p>Not into conspiracy theories, let's see what science says?</p>
-
+  <p>Not into conspiracy theories, let's see what is real? Who do you trust, which side are you on? Are you on side of truth?</p>
 
   <div style="max-width: 560px">
     <div class='embed-container'><iframe src='https://www.youtube.com/embed/vkCOZiqOhBM' frameborder='0' allowfullscreen></iframe></div>
   </div>
 
-  <p>Link to this page: <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a></p>
   <p>Ethereum address: <strong><code><a href="https://etherscan.io/address/0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9">0x0000000ed9aa4172a16c4f8178961ea6dcb6aac9</a></code></strong></p>
-  <p>Experiment design: <a href="https://londonreal.github.io/citizen-science/">londonreal.github.io/citizen-science/</a></p>
+  <p>Bitcoin address: <strong><code><a href="https://www.blockchain.com/btc/address/1GEnesisReVCQG641yERVQgStUvqH6S9U2">1GEnesisReVCQG641yERVQgStUvqH6S9U2</a></code></strong></p>
+  <p>Experiment design: <strong><code><a href="https://londonreal.github.io/citizen-science/">londonreal.github.io/citizen-science</a></code></strong></p>
   <!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
 </div>
 
