--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
     </style>
 
 <span class="emoji">🇪🇪</span> <a href="https://EstoniaDAO.org">EstoniaDAO.org</a><br><br>
-<span class="emoji">🏝</span> <a href="https://IslandDAO.org">IslandDAO.org</a><br><br>
+<span class="emoji">🏝</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
 <span class="emoji">💌</span> <a href="https://mailhustle.com">mailhustle.com</a><br><br>
 <span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br>
+<span class="emoji">🛠</span> <a href="https://genesis.re/wiki">genesis.re/wiki</a><br><br>
+<span class="emoji">🗼</span> <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a><br><br>
 <span class="emoji">🔮</span> <a href="https://www.abundance.community/members/3362617">Abundance Digital with Peter Diamandis</a><br><br>
 
 
