Colour no border radius

--- a/book/index.html
+++ b/book/index.html
@@ -15,7 +15,12 @@
       }
 
       html { 
-        background-color: black;
+        /*background-color: black;*/
+        background: url(background-earth.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
       }
 
       body {
@@ -30,13 +35,7 @@
         margin: 80px auto;
         padding: 20px;
         box-shadow: 0px 0px 30px 10px #ffffff;
-        border-radius: 10px;
-
-        background: url(background.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+        background: rgba(0,0,0,0.85)
       }
 
       @media only screen and (max-width: 800px) {
@@ -64,7 +63,6 @@
         padding: 15px; 
         font-weight: bold;
         border: 3px solid white;
-        text-decoration: underline;
         display: inline-block;
       }
       .thelink:hover {
@@ -99,9 +97,10 @@
 
     <div class="wrapper">
 
-      <h1 class="title"><span class="big">System Change</span><br>Actionable Policies to Handle Climate Emergency</h1>
+      <h1 class="title"><span class="big">System Change</span></h1>
 
-      <p>
+        <div class="title">Actionable Policies to Handle Climate Emergency<br><br>Information always wants to be free<br><br>Please share it widely</div>
+
         <a class="thelink" href="https://archive.org/download/system-change-actionable-policies-to-handle-climate-emergency/System%20Change%20-%20Actionable%20Policies%20to%20Handle%20Climate%20Emergency.pdf">PDF on archive.org</a><br><br>
 
 
@@ -114,19 +113,12 @@
         <a class="thelink" href="https://play.google.com/books/reader?id=-XjADwAAQBAJ">Google Books</a><br><br>
       </p>
 
-      <div class="title">Information always wants to be free.<br><br>Please share it widely</div>
-
-      <br>
-
-      <img src="globe.png">
-
       
 
-<style>
-  li { margin-bottom: 10px }
-</style>
 
-  <br>
+      <style>
+        li { margin-bottom: 10px }
+      </style>
 
 
     <p><strong style="font-size:1.2em;">1️⃣ Land Use.</strong><br>Food system. Less crops to feed livestock. Rebuilding soil and natural ecosystems.</p>
