--- a/book/index.html
+++ b/book/index.html
@@ -25,7 +25,7 @@
 
       body {
         margin: 0;
-        color: white;
+        color: black;
         font-family: monospace;
         font-size: 1.1em;
       }
@@ -34,8 +34,8 @@
         max-width: 700px;
         margin: 80px auto;
         padding: 20px;
-        box-shadow: 0px 0px 30px 10px #ffffff;
-        background: rgba(0,0,0,0.85)
+        box-shadow: 0px 0px 30px 10px #000;
+        background: rgba(255,255,255,0.85)
       }
 
       @media only screen and (max-width: 800px) {
@@ -45,10 +45,10 @@
       }
 
       a {
-        color: white;
+        color: black;
         text-decoration: none;
         transition: all 1000ms ease-out;
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid black;
       }
 
       img {
@@ -62,7 +62,7 @@
       .thelink {
         padding: 15px; 
         font-weight: bold;
-        border: 3px solid white;
+        border: 3px solid black;
         display: inline-block;
       }
       .thelink:hover {
