--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       h3 {
         margin-bottom: 0;
         font-weight: bold;
-        font-size: 1.3em;
+        font-size: 1.5em;
       }
       h3 + p {
         margin-top: 0;
@@ -71,6 +71,21 @@
         padding: 8px;      
         max-width: calc(100vw - 128px); 
       }
+
+
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
     </style>
 
@@ -125,8 +140,8 @@
       ship sailing US to UK in 20+ days.</p> -->
 
 
-      <h3>architecting the new world</h3>
-      <h3 style="margin-bottom: 10px">operating system for the planet(s)</h3>
+      <h3 style="margin-bottom: 10px">100% focusing on the island</h3>
+      <!-- <h3 style="margin-bottom: 10px">operating system for the planet(s)</h3> -->
 
       <!-- <h3><a href="book">The book is ready!</a></h3> -->
 
@@ -140,12 +155,26 @@
       }
     </style>
 
-<span class="emoji">🇪🇪</span> <a href="https://EstoniaDAO.org">EstoniaDAO.org</a><br><br>
-<span class="emoji">🏝</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
-<span class="emoji">💌</span> <a href="https://mailhustle.com">mailhustle.com</a><br><br>
+
+<span class="emoji">🇪🇪</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
 <span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br>
-<span class="emoji">🛠</span> <a href="https://genesis.re/wiki">genesis.re/wiki</a><br><br>
-<span class="emoji">🗼</span> <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a><br><br>
+<!-- <span class="emoji">🛠</span> <a href="https://genesis.re/wiki">genesis.re/wiki</a><br><br> -->
+<span class="emoji">🎬</span> <a href="https://youtu.be/hH-8JamPP_A">youtu.be/hH-8JamPP_A</a><br><br>
+
+
+
+<!-- <span class="emoji">🇪🇪</span> <a href="https://EstoniaDAO.org">EstoniaDAO.org</a><br><br>
+<span class="emoji">💌</span> <a href="https://mailhustle.com">mailhustle.com</a><br><br>
+
+<span class="emoji">🗼</span> <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a><br><br> -->
+
+<div class="videoWrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hH-8JamPP_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+<span class="emoji">⛪️</span> Currently based <a href="https://astralship.org">astralship.org</a><br><br>
+
 <span class="emoji">🔮</span> <a href="https://www.abundance.community/members/3362617">Abundance Digital with Peter Diamandis</a><br><br>
 
 
