--- a/index.html
+++ b/index.html
@@ -156,10 +156,13 @@
     </style>
 
 
-<span class="emoji">🇪🇪</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
-<span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br>
+<span class="emoji">➡️</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
+<span class="emoji">➡️</span> <a href="https://basexisland.com/onepager">basexisland.com<b>/onepager</b></a><br><br>
+<span class="emoji">➡️</span> <a href="https://basexisland.com/deck">basexisland.com<b>/deck</b></a><br><br>
+<span class="emoji">➡️</span> <a href="https://basexisland.com/plan">basexisland.com<b>/plan</b></a><br><br>
+<!-- <span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br> -->
 <!-- <span class="emoji">🛠</span> <a href="https://genesis.re/wiki">genesis.re/wiki</a><br><br> -->
-<span class="emoji">🎬</span> <a href="https://youtu.be/hH-8JamPP_A">youtu.be/hH-8JamPP_A</a><br><br>
+<!-- <span class="emoji">🎬</span> <a href="https://youtu.be/hH-8JamPP_A">youtu.be/hH-8JamPP_A</a><br><br> -->
 
 
 
@@ -168,14 +171,14 @@
 
 <span class="emoji">🗼</span> <a href="https://genesis.re/citizenscience">genesis.re/citizenscience</a><br><br> -->
 
-<div class="videoWrapper">
+<!-- <div class="videoWrapper">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hH-8JamPP_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+</div> -->
 
 
-<span class="emoji">⛪️</span> Currently based <a href="https://astralship.org">astralship.org</a><br><br>
+<!-- <span class="emoji">⛪️</span> Currently based <a href="https://astralship.org">astralship.org</a><br><br> -->
 
-<span class="emoji">🔮</span> <a href="https://www.abundance.community/members/3362617">Abundance Digital with Peter Diamandis</a><br><br>
+<span class="emoji">🔮</span> Proud member of <a href="https://www.abundance.community/members/3362617">Abundance Digital</a> with Peter Diamandis<br><br>
 
 
       <br>
