--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       ship sailing US to UK in 20+ days.</p> -->
 
 
-      <h3 style="margin-bottom: 10px">100% focusing on the island</h3>
+      <h3 style="margin-bottom: 10px; font-size: 20px">Realising human potential to heal the planet(s)</h3>
       <!-- <h3 style="margin-bottom: 10px">operating system for the planet(s)</h3> -->
 
       <!-- <h3><a href="book">The book is ready!</a></h3> -->
@@ -154,6 +154,10 @@
         position: relative;
       }
     </style>
+
+
+
+
 
 
 <span class="emoji">➡️</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
