--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>genesis.re • operating system for the planets</title>
+    <title>Network State Genesis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <style>
@@ -89,16 +89,16 @@
 
     </style>
 
-    <meta property="og:title" content="genesis.re • operating system for the planets"/>
+    <meta property="og:title" content="Network State Genesis"/>
     <meta property="og:image" content="https://genesis.re/flower.jpg""/>
     <meta property="og:site_name" content="architecting the new world"/>
-    <meta property="og:description" content="working towards 'Plan B' as paradigm shift is required"/>
+    <meta property="og:description" content="Architecting a new world. Operating system for the planet(s)"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@marsXrobertson">
-    <meta name="twitter:title" content="genesis.re • operating system for the planets">
-    <meta name="twitter:description" content="architecting the new world • working towards 'Plan B' as paradigm shift is required">
+    <meta name="twitter:title" content="Network State Genesis">
+    <meta name="twitter:description" content="Architecting a new world. Operating system for the planet(s)">
     <meta name="twitter:image" content="https://genesis.re/flower.jpg">
 
 
@@ -140,7 +140,7 @@
       ship sailing US to UK in 20+ days.</p> -->
 
 
-      <h3 style="margin-bottom: 10px; font-size: 20px">Realising human potential to heal the planet(s)</h3>
+      <h1 style="margin-bottom: 10px; font-size: 30px">Network State Genesis</h1>
       <!-- <h3 style="margin-bottom: 10px">operating system for the planet(s)</h3> -->
 
       <!-- <h3><a href="book">The book is ready!</a></h3> -->
@@ -155,15 +155,20 @@
       }
     </style>
 
+<h3 style="margin-bottom: 10px; font-size: 20px">Attempt 1</h3>
+<img src="passport/network-state-genesis-OPTION1.jpg" style="max-width: 100%;">
+Design by <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/125">Dexterous</a>
+
+<h3 style="margin-bottom: 10px; font-size: 20px">Attempt 2</h3>
+<img src="passport/network-state-genesis-OPTION2.png" style="max-width: 100%;">
+Design by <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/78">Max63</a>
 
 
 
-
-
-<span class="emoji">➡️</span> <a href="https://basexisland.com">basexisland.com</a><br><br>
-<span class="emoji">➡️</span> <a href="https://basexisland.com/onepager">basexisland.com<b>/onepager</b></a><br><br>
-<span class="emoji">➡️</span> <a href="https://basexisland.com/deck">basexisland.com<b>/deck</b></a><br><br>
-<span class="emoji">➡️</span> <a href="https://basexisland.com/plan">basexisland.com<b>/plan</b></a><br><br>
+<!-- <span class="emoji">➡️</span> <a href="https://basexisland.com">basexisland.com</a><br><br> -->
+<!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/onepager">basexisland.com<b>/onepager</b></a><br><br> -->
+<!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/deck">basexisland.com<b>/deck</b></a><br><br> -->
+<!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/plan">basexisland.com<b>/plan</b></a><br><br> -->
 <!-- <span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br> -->
 <!-- <span class="emoji">🛠</span> <a href="https://genesis.re/wiki">genesis.re/wiki</a><br><br> -->
 <!-- <span class="emoji">🎬</span> <a href="https://youtu.be/hH-8JamPP_A">youtu.be/hH-8JamPP_A</a><br><br> -->
@@ -182,9 +187,17 @@
 
 <!-- <span class="emoji">⛪️</span> Currently based <a href="https://astralship.org">astralship.org</a><br><br> -->
 
-<span class="emoji">🔮</span> Proud member of <a href="https://www.abundance.community/members/3362617">Abundance Digital</a> with Peter Diamandis<br><br>
+<!-- <span class="emoji">🔮</span> Proud member of <a href="https://www.abundance.community/members/3362617">Abundance Digital</a> with Peter Diamandis<br><br> -->
 
 
+      <br>
+      <br>
+      <br>
+      <p><a href="https://docs.google.com/document/d/1bN4MpxCpEad-1PesnX9B3Lu_Sm57IEXQfHCoagYXB3M/edit?usp=sharing">Google Doc</a> with mission / vision / rationale.</p>
+      <p>Until 4th of July, the flat price of 0.1 ETH</p>
+      <p>5th of July onwards, 0.1% increase with each new passport minted</p>
+      <p>1 WBTC always gets you one, regardless of the calculated ETH price</p>
+      <br>
       <br>
 
       <!-- <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%"> -->
