--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
 
       <!-- <h3 style="margin-bottom: 10px">current projects</h3> -->
 
+      <br>
+      <br>
+
+      <p><a href="https://docs.google.com/document/d/1bN4MpxCpEad-1PesnX9B3Lu_Sm57IEXQfHCoagYXB3M/edit?usp=sharing">Google Doc</a> with mission / vision / rationale.</p>
+      <p>Until 4th of July, the flat price of 0.1 ETH</p>
+      <p>From 5th of July onwards, 0.1% increase with each new passport minted.</p>
+      <p>1 WBTC always gets you one, regardless of the current ETH price.</p>
+      <p>The final artwork will be inclusive open-source collaboration.</p>
+
       <style> .emoji {
         margin-top: 20px;
         font-size: 2em;
@@ -155,14 +164,19 @@
       }
     </style>
 
-<h3 style="margin-bottom: 10px; font-size: 20px">Attempt 1</h3>
+    <br>
+    <br>
+
+<h3 style="margin-bottom: 10px; font-size: 20px">Design attempt 1</h3>
 <img src="passport/network-state-genesis-OPTION1.jpg" style="max-width: 100%;">
-Design by <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/125">Dexterous</a>
+Creator: <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/125">Dexterous</a>
 
-<h3 style="margin-bottom: 10px; font-size: 20px">Attempt 2</h3>
+<h3 style="margin-bottom: 10px; font-size: 20px">Design attempt 2</h3>
 <img src="passport/network-state-genesis-OPTION2.png" style="max-width: 100%;">
-Design by <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/78">Max63</a>
+Creator: <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/78">Max63</a>
 
+<br>
+<br>
 
 
 <!-- <span class="emoji">➡️</span> <a href="https://basexisland.com">basexisland.com</a><br><br> -->
@@ -193,12 +207,7 @@ Design by <a href="https://99designs.co.uk/other-art-illustration/contests/netwo
       <br>
       <br>
       <br>
-      <p><a href="https://docs.google.com/document/d/1bN4MpxCpEad-1PesnX9B3Lu_Sm57IEXQfHCoagYXB3M/edit?usp=sharing">Google Doc</a> with mission / vision / rationale.</p>
-      <p>Until 4th of July, the flat price of 0.1 ETH</p>
-      <p>5th of July onwards, 0.1% increase with each new passport minted</p>
-      <p>1 WBTC always gets you one, regardless of the calculated ETH price</p>
-      <br>
-      <br>
+
 
       <!-- <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%"> -->
 
@@ -308,7 +317,7 @@ Design by <a href="https://99designs.co.uk/other-art-illustration/contests/netwo
         <strong>Mars Robertson</strong><br>
         Chief Integration Officer<br>
         <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a><br>
-        <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br>
+        <a href="mailto:email@genesis.re">email@genesis.re</a><br>
         <a href="https://marsrobertson.com">marsrobertson.com</a><br>
         <div class="clearfix"></div>
 
