--- a/index.html
+++ b/index.html
@@ -150,9 +150,19 @@
       <br>
       <br>
 
-      <p><a href="https://docs.google.com/document/d/1bN4MpxCpEad-1PesnX9B3Lu_Sm57IEXQfHCoagYXB3M/edit?usp=sharing">Google Doc</a> with mission / vision / rationale.</p>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">Mission / vision / rationale</h3>
+      <p>Check the <a href="https://docs.google.com/document/d/1bN4MpxCpEad-1PesnX9B3Lu_Sm57IEXQfHCoagYXB3M/edit?usp=sharing">Google Doc</a> with the details.</p>
+      <p>United Nations were created in 1945 after WW2.</p>
+      <p>COVID accelerated transition to digital.</p>
+      <p>Become the member of Planetary Council and Galactic Federation.</p>
+      <p>Become the member of Network State Genesis.</p>
+      
+  <br>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">Logistics</h3>
       <p>Until 4th of July, the flat price of 0.1 ETH</p>
-      <p>From 5th of July onwards, 0.1% increase with each new passport minted.</p>
+      <p>From 5th of July, 0.1% increase with each new passport minted.</p>
       <p>1 WBTC always gets you one, regardless of the current ETH price.</p>
       <p>The final artwork will be inclusive open-source collaboration.</p>
 
@@ -170,6 +180,9 @@
 <h3 style="margin-bottom: 10px; font-size: 20px">Design attempt 1</h3>
 <img src="passport/network-state-genesis-OPTION1.jpg" style="max-width: 100%;">
 Creator: <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/125">Dexterous</a>
+
+<br>
+<br>
 
 <h3 style="margin-bottom: 10px; font-size: 20px">Design attempt 2</h3>
 <img src="passport/network-state-genesis-OPTION2.png" style="max-width: 100%;">
