--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
     </style>
 
     <meta property="og:title" content="Network State Genesis"/>
-    <meta property="og:image" content="https://genesis.re/flower.jpg""/>
-    <meta property="og:site_name" content="architecting the new world"/>
-    <meta property="og:description" content="Architecting a new world. Operating system for the planet(s)"/>
+    <meta property="og:image" content="https://genesis.re/preview.jpg""/>
+    <meta property="og:site_name" content="Network State Genesis - Passport NFT"/>
+    <meta property="og:description" content="Architecting a New World. Operating System for the Planet(s)"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@marsXrobertson">
-    <meta name="twitter:title" content="Network State Genesis">
-    <meta name="twitter:description" content="Architecting a new world. Operating system for the planet(s)">
-    <meta name="twitter:image" content="https://genesis.re/flower.jpg">
+    <meta name="twitter:title" content="Network State Genesis - Passport NFT">
+    <meta name="twitter:description" content="Architecting a New World. Operating System for the Planet(s)">
+    <meta name="twitter:image" content="https://genesis.re/preview.jpg">
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -140,31 +140,61 @@
       ship sailing US to UK in 20+ days.</p> -->
 
 
-      <h1 style="margin-bottom: 10px; font-size: 30px">Network State Genesis</h1>
+      <h1 style="margin-bottom: 10px; font-size: 25px">Network State Genesis - Passport NFT</h1>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">Architecting a New World</h3>
+      <h3 style="margin-bottom: 10px; font-size: 25px">Operating System for the Planet(s)</h3>
+
+      <br>
+      <br>
+
+
+      <!-- <h3 style="margin-bottom: 10px; font-size: 20px">Planetary Council</h3> -->
+      <!-- <h3 style="margin-bottom: 10px; font-size: 20px">Galactic Federation</h3> -->
       <!-- <h3 style="margin-bottom: 10px">operating system for the planet(s)</h3> -->
 
       <!-- <h3><a href="book">The book is ready!</a></h3> -->
 
       <!-- <h3 style="margin-bottom: 10px">current projects</h3> -->
 
+      <img src="Network-State-Genesis-PASSPORT-LATEST.jpg" style="max-width: 100%;">
+
       <br>
       <br>
 
 
-      <h3 style="margin-bottom: 10px; font-size: 25px">Mission / vision / rationale</h3>
-      <p>Check the <a href="https://docs.google.com/document/d/1bN4MpxCpEad-1PesnX9B3Lu_Sm57IEXQfHCoagYXB3M/edit?usp=sharing">Google Doc</a> with the details.</p>
-      <p>United Nations were created in 1945 after WW2.</p>
+      <h3 style="margin-bottom: 10px; font-size: 25px">Mission / vision / manifesto</h3>
+      <p>Agricultural revolution. Industral revolution. Digital revolution.</p>
       <p>COVID accelerated transition to digital.</p>
-      <p>Become the member of Planetary Council and Galactic Federation.</p>
-      <p>Become the member of Network State Genesis.</p>
+      <p>The United Nations were created in 1945 after WW2.</p>
+      <p>Now we have yet another new world order and a new set of challenges.</p>
+      <p>Check out our <a href="https://gateway.pinata.cloud/ipfs/QmYLhBxgdUCCygX5GBB764PwUUQknFBjERmPKu22DfqmFS">articles of inforporation</a>.</p>
+      <p>We believe it starts with incentives.</p>
+      
+      <!-- <p>Become the member of Planetary Council and Galactic Federation.</p> -->
+      <!-- <p>Become the member of Network State Genesis.</p> -->
       
   <br>
 
-      <h3 style="margin-bottom: 10px; font-size: 25px">Logistics</h3>
-      <p>Until 4th of July, the flat price of 0.1 ETH</p>
+      <h3 style="margin-bottom: 10px; font-size: 25px">ETH logistics</h3>
+      <p>Until 4th of July 2021 (Independence Day), the flat price is 0.07 ETH</p>
       <p>From 5th of July, 0.1% increase with each new passport minted.</p>
       <p>1 WBTC always gets you one, regardless of the current ETH price.</p>
-      <p>The final artwork will be inclusive open-source collaboration.</p>
+      <!-- <p> Loads of ancient history on the <a href="/wiki">wiki</a>.</p> -->
+
+      <br>
+      <br>
+
+      <code style="padding: 10px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
+
+      <br>
+      <br>
+      <br>
+
+      <p>Source on <a href="https://etherscan.io/address/0x3ef61d25b2bf303de52efdd5e50698bed8f9eb8d#code">Etherscan.</a>
+      Source code on <a href="https://github.com/genesisdotre/network-state-genesis">GitHub</a>.</a></p>
+      <p>Use 200,000 gas and a wallet that you own (not an exchange).</p>
+
 
       <style> .emoji {
         margin-top: 20px;
@@ -177,23 +207,7 @@
     <br>
     <br>
 
-<h3 style="margin-bottom: 10px; font-size: 20px">Design attempt 1</h3>
-<img src="passport/network-state-genesis-OPTION1.jpg" style="max-width: 100%;">
-Creator: <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/125">Dexterous</a>
-
-<br>
-<br>
-
-<h3 style="margin-bottom: 10px; font-size: 20px">Design attempt 2</h3>
-<img src="passport/network-state-genesis-OPTION2.png" style="max-width: 100%;">
-Creator: <a href="https://99designs.co.uk/other-art-illustration/contests/network-state-genesis-passport-cover-1070183/entries/78">Max63</a>
-
-<br>
-<br>
-
-
-<!-- <span class="emoji">➡️</span> <a href="https://basexisland.com">basexisland.com</a><br><br> -->
-<!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/onepager">basexisland.com<b>/onepager</b></a><br><br> -->
+    <!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/onepager">basexisland.com<b>/onepager</b></a><br><br> -->
 <!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/deck">basexisland.com<b>/deck</b></a><br><br> -->
 <!-- <span class="emoji">➡️</span> <a href="https://basexisland.com/plan">basexisland.com<b>/plan</b></a><br><br> -->
 <!-- <span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br> -->
