--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
       <p>COVID accelerated transition to digital.</p>
       <p>The United Nations were created in 1945 after WW2.</p>
       <p>Now we have yet another new world order and a new set of challenges.</p>
-      <p>Check out our <a href="https://gateway.pinata.cloud/ipfs/QmYLhBxgdUCCygX5GBB764PwUUQknFBjERmPKu22DfqmFS">articles of inforporation</a>.</p>
-      <p>We believe it starts with incentives.</p>
+      <p>Check our <a href="https://gateway.pinata.cloud/ipfs/QmYLhBxgdUCCygX5GBB764PwUUQknFBjERmPKu22DfqmFS">founding document</a>.</p>
+      <p>We believe it starts with the power of incentives.</p>
       
       <!-- <p>Become the member of Planetary Council and Galactic Federation.</p> -->
       <!-- <p>Become the member of Network State Genesis.</p> -->
