--- a/index.html
+++ b/index.html
@@ -169,15 +169,15 @@
       <p>The United Nations were created in 1945 after WW2.</p>
       <p>Now we have yet another new world order and a new set of challenges.</p>
       <p>Check our <a href="https://gateway.pinata.cloud/ipfs/QmYLhBxgdUCCygX5GBB764PwUUQknFBjERmPKu22DfqmFS">founding document</a>.</p>
-      <p>We believe it starts with the power of incentives.</p>
+      <p>We believe it starts with the power of incentives...</p>
       
       <!-- <p>Become the member of Planetary Council and Galactic Federation.</p> -->
       <!-- <p>Become the member of Network State Genesis.</p> -->
       
   <br>
 
-      <h3 style="margin-bottom: 10px; font-size: 25px">ETH logistics</h3>
-      <p>Until 4th of July 2021 (Independence Day), the flat price is 0.07 ETH</p>
+      <h3 style="margin-bottom: 10px; font-size: 25px">Smart contract on Ethereum</h3>
+      <p>Until 4th of July <i>(Independence Day)</i>, the fixed price is 0.07 ETH</p>
       <p>From 5th of July, 0.1% increase with each new passport minted.</p>
       <p>1 WBTC always gets you one, regardless of the current ETH price.</p>
       <!-- <p> Loads of ancient history on the <a href="/wiki">wiki</a>.</p> -->
@@ -185,15 +185,17 @@
       <br>
       <br>
 
-      <code style="padding: 10px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
+      <code style="padding: 15px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
 
       <br>
       <br>
       <br>
+      <p>Most likely there will be an airdrop for early supporters.</p>
 
-      <p>Source on <a href="https://etherscan.io/address/0x3ef61d25b2bf303de52efdd5e50698bed8f9eb8d#code">Etherscan.</a>
-      Source code on <a href="https://github.com/genesisdotre/network-state-genesis">GitHub</a>.</a></p>
-      <p>Use 200,000 gas and a wallet that you own (not an exchange).</p>
+      <p>Source on <a href="https://etherscan.io/address/0x3ef61d25b2bf303de52efdd5e50698bed8f9eb8d#code">Etherscan.</a></p>
+      <p>Source code on <a href="https://github.com/genesisdotre/network-state-genesis">GitHub</a>.</a></p>
+      <p>Use 200,000 gas (<a href="https://github.com/MetaMask/metamask-extension/issues/7772">issue on GitHub</a>) otherwise transaction will fail.</p>
+      <p>Use a wallet that you own (not an exchange), <a href="https://metamask.zendesk.com/hc/en-us/articles/360058238591-NFT-tokens-in-MetaMask-wallet">MetaMask should be OK</a>.</p>
 
 
       <style> .emoji {
